--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,29 @@ dist.jar=${dist.dir}/program_resto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-beanutils-1.8.3.jar=lib\\commons-beanutils-1.8.3.jar
+file.reference.commons-collections-20040616.jar=lib\\commons-collections-20040616.jar
+file.reference.commons-collections4-4.1.jar=lib\\commons-collections4-4.1.jar
+file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=lib\\commons-logging-1.2.jar
+file.reference.groovy-all-1.8.0.jar=lib\\groovy-all-1.8.0.jar
+file.reference.jasperreports-6.5.1.jar=lib\\jasperreports-6.5.1.jar
+file.reference.jasperreports-fonts-6.5.1.jar=lib\\jasperreports-fonts-6.5.1.jar
+file.reference.jasperreports-javaflow-6.5.1.jar=lib\\jasperreports-javaflow-6.5.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jasperreports-6.5.1.jar}:\
+    ${file.reference.jasperreports-fonts-6.5.1.jar}:\
+    ${file.reference.jasperreports-javaflow-6.5.1.jar}:\
+    ${file.reference.commons-beanutils-1.8.3.jar}:\
+    ${file.reference.commons-collections-20040616.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.groovy-all-1.8.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
